--- a/src/main/resources/templates/layouts/editview/editQuotationDetail.html
+++ b/src/main/resources/templates/layouts/editview/editQuotationDetail.html
@@ -101,8 +101,12 @@
 																	</div>
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">Nature of Purchase</label>
-																		<input type="text" class="form-control"
-																			id="inputPassword4" placeholder="nature of purchase">
+																		//capitalYn <select class="form-control"
+																			 title="nature of purchase"
+																			required id="" th:field="*{capitalYn}">
+																			<option value="">Select</option>
+																			<option value="C">Capital</option>
+																			<option value="N">Non-Capital</option>	</select>
 																	</div>
 
 																	<div class="form-group col-md-4">
