--- a/src/main/resources/templates/layouts/editview/editRequestForQuotation.html
+++ b/src/main/resources/templates/layouts/editview/editRequestForQuotation.html
@@ -91,7 +91,7 @@
 													<div class="form-group col-md-4">
 														<label for="inputEmail4">Request for Quotation Num</label>
 														<input type="text" class="form-control"
-															placeholder="quotation number" th:field="*{rfqNo}">
+															placeholder="quotation number" th:field="*{rfqNo}" readonly>
 													</div>
 													<div class="form-group col-md-4">
 														<label class="form-label">Request For Quotation
