--- a/src/main/resources/templates/layouts/Master/purchaseOrder.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrder.html
@@ -372,8 +372,8 @@
 
 																		<!--  indent number -->
 																		<td><select
-																			class="form-control indentContainer form-control-sm select"
-																			id="indentNumberPo"
+																			class="form-control indentContainer0 form-control-sm select"
+																			id="indentNumberPo0"
 																			name="listPurchaseOrderItem[0].openIndent"
 																			title="indent number" onchange='getIndentDetailPo()'
 																			required>
@@ -384,13 +384,13 @@
 																		<!-- indent date  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="indentDatePo" title="indent date"
+																			id="indentDatePo0" title="indent date"
 																			name="listPurchaseOrderItem[0].indentDate"></td>
 
 																		<!-- item number  -->
 
-																		<td><select id="itemPo"
-																			class="form-control form-control-sm select itemContainerPo"
+																		<td><select id="itemPo0"
+																			class="form-control form-control-sm select itemContainerPo0"
 																			required title="item" onchange="getItemInfoInPo()"
 																			name="listPurchaseOrderItem[0].item">
 																				<option value="">Select</option>
@@ -401,7 +401,7 @@
 																		<td><input type="number"
 																			class="form-control form-control-sm" id="itemRate0"
 																			title="item rate"
-																			name="listPurchaseOrderItem[0].itemRate"></td>
+																			name="listPurchaseOrderItem[0].itemRate" onkeyup="calculateItemNRate()"></td>
 
 
 																		<!--  efective date -->
@@ -415,7 +415,7 @@
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			title="qty order" id="qtyOrder0"
-																			name="listPurchaseOrderItem[0].qtyOrder"></td>
+																			name="listPurchaseOrderItem[0].qtyOrder" onkeyup="calculateItemNRate()"></td>
 
 																		<!--  total item cost -->
 																		<td><input type="text"
@@ -648,6 +648,8 @@
 
 
 	<script>
+	
+	var idIndex1 = 0;
 		function openPoFun() {
 
 			console.log("calling open po function ")
@@ -663,6 +665,8 @@
 				$('#quotationNumber').val('');
 				$('#quotationDate').val('');
 				$('#purchaseThrough').val('');
+				
+				disabledIndentBlock()
 
 			} else {
 				console.log("open po fun : else block ")
@@ -670,6 +674,50 @@
 				$("#quotationNumber").prop('disabled', false);
 				$("#quotationDate").prop('disabled', false);
 			}
+		}
+		
+		function disabledIndentBlock(){
+			
+			console.log("disabled indent detail block ")
+			//var indentNumber = document.getElementById("indentNumberPo"+idIndex1).value;
+			//var indentdate = document.getElementById("indentDatePo"+idIndex1).value;
+			
+			$("#indentNumberPo"+idIndex1).prop('disabled', true);
+			
+			$("#indentDatePo"+idIndex1).prop('disabled', true);
+			
+			getItemListWithoutIndentAndQuotation();
+		}
+		
+		function getItemListWithoutIndentAndQuotation(){
+			
+			
+			console.log("<============   get Item List in case : of witout indent and quotation ========> " )
+
+			$.ajax({
+				type: "GET",
+				url: "itemList/" ,
+
+				success: function(data) {
+					console.log("Item Info behalf of Indent Number  : " + data)
+
+					var options = '<option value=""><strong>Select Item</strong></option>';
+					$(data).each(function(index, value) {
+
+						console.log("item code : " + value.itemCode)
+						console.log("item name  : " + value.description)
+
+						options += '<option value="' + value.itemCode + '">' + value.description + '</option>';
+
+					});
+
+					$('.itemContainerPo'+idIndex1).html(options);
+
+				}, error: function() {
+					console.log("Error");
+				}
+			});
+			
 		}
 
 		function againstPurchaseThrough() {
@@ -738,7 +786,7 @@
 
 											});
 
-							$('.indentContainer').html(options);
+							$('.indentContainer'+idIndex1).html(options);
 
 						},
 						error : function() {
@@ -820,7 +868,8 @@
 
 											});
 
-							$('.indentContainer').html(options);
+							console.log("id index value is : " + idIndex1)
+							$('.indentContainer'+idIndex1).html(options);
 
 						},
 						error : function() {
@@ -828,7 +877,148 @@
 						}
 					});
 		}
+		
+		
+		function getIndentDetailPo() {
+
+			var indentNumber = document.getElementById("indentNumberPo"+idIndex1).value;
+
+			$.ajax({
+				type: "GET",
+				url: "indentdetail/" + indentNumber,
+
+				success: function(data) {
+					console.log("Indent Detail data is : " + data)
+
+					console.log("indent data is : " + data.indentDate)
+					$("#indentDatePo"+idIndex1).val(data.indentDate)
+					//$("#empName").val(data.employee.empName);
+					//$("#empCode").val(data.employee.empCode);
+
+					getItemList(indentNumber);
+
+
+
+				}, error: function() {
+					console.log("Error");
+				}
+			});
+		}
+		
+		
+		function getItemList(indentNumber) {
+
+
+			console.log("get Item List Function is : " + indentNumber)
+
+			$.ajax({
+				type: "GET",
+				url: "itemList/" + indentNumber,
+
+				success: function(data) {
+					console.log("Item Info behalf of Indent Number  : " + data)
+
+					var options = '<option value=""><strong>Select Item</strong></option>';
+					$(data).each(function(index, value) {
+
+						console.log("item code : " + value.itemCode)
+						console.log("item name  : " + value.description)
+
+						options += '<option value="' + value.itemCode + '">' + value.description + '</option>';
+
+					});
+
+					$('.itemContainerPo'+idIndex1).html(options);
+
+				}, error: function() {
+					console.log("Error");
+				}
+			});
+
+		}
+		
+		function getItemInfoInPo() {
+
+			console.log("get item info ")
+			console.log("id index value is  ; " + idIndex1)
+			var itemNumber = document.getElementById("itemPo"+idIndex1).value;
+			var indentNumber = document.getElementById("indentNumberPo"+idIndex1).value;
+			console.log("get item detail : " + indentNumber + " : " + itemNumber)
+
+			if(itemNumber  === " " && indentNumber===" "){
+				
+				$.ajax({
+					type: "GET",
+					url: "itemInfo",
+
+					success: function(data) {
+						console.log("item info detail on po = YES " + data)
+
+						$("#itemRate"+idIndex1).val(data.itemRate)
+						//$("#qtyOrder"+idIndex1).val(data.indQty)
+
+
+						totalCostCal();
+
+					}, error: function() {
+						console.log("Error");
+					}
+				});
+				
+			}else{
+				
+				$.ajax({
+					type: "GET",
+					url: "itemInfo/" + itemNumber + "/" + indentNumber,
+
+					success: function(data) {
+						console.log("item info detail " + data)
+
+						$("#itemRate"+idIndex1).val(data.itemRate)
+						$("#qtyOrder"+idIndex1).val(data.indQty)
+
+
+						totalCostCal();
+
+					}, error: function() {
+						console.log("Error");
+					}
+				});
+				
+			}
+			
+		}
 	</script>
+	
+	
+	
+<script>
+
+function supplierInfo(){
+	
+	var supplierId = document.getElementById("supplierId").value;
+	$.ajax({
+		type: "GET",
+		url: "supplierInfo/" + supplierId ,
+
+		success: function(data) {
+			console.log("item info detail " + data)
+
+			$("#supplierState").val(data.state.stateCode)
+			//$("#qtyOrder").val(data.indQty)
+
+
+			totalCostCal();
+
+		}, error: function() {
+			console.log("Error");
+		}
+	});
+	
+}
+</script>
+
+
 
 	<script>
 		$(document).ready(function() {
@@ -848,6 +1038,24 @@
 		});
 	</script>
 
+	<script>
+	
+	function calculateItemNRate(){
+		
+		var itemRate = document.getElementById("itemRate"+idIndex1).value;
+		var qty = document.getElementById("qtyOrder"+idIndex1).value;
+		
+		if(itemRate){
+			if(qty){
+				var result = itemRate * qty ;
+				document.getElementById("totalCost"+idIndex1).value = result;
+				document.getElementById("totalCostInr"+idIndex1).value = result;
+			}
+		}
+	}
+	
+	
+	</script>
 
 
 	<script>
@@ -868,7 +1076,7 @@
 
 												console
 														.log("add clickk function I")
-												//idIndex2++;
+												idIndex1++;
 												$('#addr' + j)
 														.html(
 																
@@ -876,7 +1084,7 @@
 																"<td><select class='form-control form-control-sm select' id='supplierId"+j+"' ><option value='M' selected>Material</option><option value='S'>Service</option></select></td>'" 
 
 																/*  indent number  */
-																		+ "<td><select class='form-control indentContainer form-control-sm select' id='indentNumberPo'"+j+" name='listPurchaseOrderItem["+j+"].openIndent' title='indent number' onchange='getIndentDetailPo()' required><option value=''>Select Indent</option></select></td>" 
+																		+ "<td><select class='form-control indentContainer"+j+" form-control-sm select'  id='indentNumberPo"+j+"' name='listPurchaseOrderItem["+j+"].openIndent' title='indent number' onchange='getIndentDetailPo()' required><option value=''>Select Indent</option></select></td>" 
 
 																		
 																		/*  indent date */
@@ -888,7 +1096,7 @@
 
 																		
 																		/* item rate  */
-																		+ "<td><input type='number'class='form-control form-control-sm' id='itemRate0"+j+"'title='item rate'name='listPurchaseOrderItem["+j+"].itemRate'></td>" 
+																		+ "<td><input type='number'class='form-control form-control-sm' id='itemRate"+j+"'title='item rate'name='listPurchaseOrderItem["+j+"].itemRate' onkeyup='calculateItemNRate()'></td>" 
 
 																		
 																		/* effective rate  */
@@ -896,15 +1104,15 @@
 
 																		
 																		/*  qty order */
-																		+ "<td><input type='number'class='form-control form-control-sm'title='qty order' id='qtyOrder0"+j+"'name='listPurchaseOrderItem["+j+"].qtyOrder'></td>" 
+																		+ "<td><input type='number'class='form-control form-control-sm'title='qty order' id='qtyOrder"+j+"'name='listPurchaseOrderItem["+j+"].qtyOrder' onkeyup='calculateItemNRate()'></td>" 
 
 																		
 																		/* total item cost  */
-																		+ "<td><input type='text'class='form-control form-control-sm' id='totalCost0"+j+"'title='total item cost'></td>" 
+																		+ "<td><input type='text'class='form-control form-control-sm' id='totalCost"+j+"'title='total item cost'></td>" 
 
 																		
 																		/* total cost inr  */
-																		+ "<td><input type='text' class='form-control form-control-sm' id='totalCostInr0"+j+"' title='total item cost(inr)''></td>" 
+																		+ "<td><input type='text' class='form-control form-control-sm' id='totalCostInr"+j+"' title='total item cost(inr)''></td>" 
 
 																		
 																		/*  remarks  */
@@ -917,6 +1125,10 @@
 																+ '"></tr>');
 
 												//listOfSupplierInfo()
+												
+												
+												
+												openPoFun()
 
 												j++;
 
@@ -927,6 +1139,7 @@
 									$("#addr" + (j - 1)).html('');
 
 									j--;
+									idIndex1--;
 
 								}
 							});
