code commit@Rahul
work flow of data in purchase order has been done

--- a/src/main/resources/templates/layouts/Master/purchaseOrder.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrder.html
@@ -1127,8 +1127,32 @@ function supplierInfo(){
 												//listOfSupplierInfo()
 												
 												
+												// for open po == YES 
 												
-												openPoFun()
+												
+												var openPoType = document.getElementById("openPo").value;
+												var purchaseThrough = document.getElementById("purchaseThrough").value;
+												
+												//indentDetailInCaseOfIndent
+												
+												
+												if(openPoType ==='N'){
+													
+													if(purchaseThrough==='I'){
+														indentDetailInCaseOfIndent()
+													}else{
+														getIndentAgainstQuotationDetail()
+													}
+													
+													
+												}else{
+													openPoFun()
+												}
+												
+												
+												
+												
+												
 
 												j++;
 
